mariadb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb
          name: mariadb
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - >-
                docker-entrypoint.sh --log-bin --binlog-format=row
                  --log-basename=master --binlog-do-db=$MYSQL_DATABASE
          volumeMounts:
            - mountPath: /var/lib/mysql
              name:      mariadb-data
            - mountPath: /mariadb-init-db
              name:      mariadb-init-db
          lifecycle:
            preStop:
              exec:
                command: ["/mariadb-init-db/stop-db.sh"]
          livenessProbe:
            exec:
              command: 
                - "sh"
                - "-c"
                - "mysqladmin status -p$MYSQL_ROOT_PASSWORD"
          readinessProbe:
            exec:
              command: 
                - "sh"
                - "-c"
                - "mysqladmin status -p$MYSQL_ROOT_PASSWORD"
      volumes:
        - name: mariadb-init-db
          configMap:
            name: mariadb-init-db
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
