mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo-express
 labels:
  app: mongodb-express
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mongo-express
 template:
  metadata:
   labels:
    app: mongo-express
  spec:
   containers:
    - name: mongo-express
      image: mongo-express
      ports:
      - containerPort: 8081
