personnalpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: registry.gitlab.com/remiliance/registrydockerimage:latest
  imagePullSecrets:
  - name: my-registry-key
