sql.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql2-deploy
spec:
  containers:
  - image: mysql:5.6
    name: monsql
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: monvolume
  volumes:
  - name: monvolume
    persistentVolumeClaim: 
      claimName: mynfspvc
