mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  externalIPs:
  - 192.168.0.99
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
