monservice.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-05-27T12:51:28Z"
    labels:
      component: apiserver
      provider: kubernetes
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:component: {}
            f:provider: {}
        f:spec:
          f:clusterIP: {}
          f:ports:
            .: {}
            k:{"port":443,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kube-apiserver
      operation: Update
      time: "2020-05-27T12:51:28Z"
    name: kubernetes
    namespace: default
    resourceVersion: "153"
    selfLink: /api/v1/namespaces/default/services/kubernetes
    uid: 59a614d7-2576-4f24-9399-4bdac224c412
  spec:
    clusterIP: 10.96.0.1
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-05-28T13:06:53Z"
    labels:
      app: monnginx
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:externalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kubectl
      operation: Update
      time: "2020-05-28T13:06:53Z"
    name: monnginx
    namespace: default
    resourceVersion: "195533"
    selfLink: /api/v1/namespaces/default/services/monnginx
    uid: 53d6688d-b472-41f8-aaed-6087e8737cde
  spec:
    clusterIP: 10.100.118.224
    externalTrafficPolicy: Cluster
    ports:
    - name: 8080-80
      nodePort: 30084
      port: 8080
      protocol: TCP
      targetPort: 80
    selector:
      app: monnginx
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
