monserviceapi.yml
apiVersion: v1
kind: Service
metadata:
  name: myfirstdeploy
spec:
  selector:
    app: monfront
  type: LoadBalancer
  externalIPs:
  - 192.168.0.90
  ports: 
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30001
