ingress.yml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
 name: myapp-ingress   
spec: 
 rules: 
 - host: "myemployee.com" 
   http: 
     paths: 
     - path: / 
       backend: 
         serviceName: myfirstdeploy 
         servicePort: 8080
